[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ndplot"
dynamic = ["version"] # dynamic version
description = "A tool to perform n-dimensional plots from a collection of figures."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
keywords = ["plot", "visualization", "n dimensional", "multi dimensional", "sliders", "interactive"]
authors = [
    {name = "Stefano Dal Forno", email = "tenobaldi@gmail.com"},
    ]
maintainers = [
    {name = "Stefano Dal Forno", email = "tenobaldi@gmail.com"}
    ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python"
    ]
dependencies = [
    "matplotlib",
    ]

[tool.setuptools.dynamic]
version = {attr = "ndplot.__version__"}

[project.urls]
Repository = "https://github.com/me/ndplot.git"
Funding = "https://buymeacoffee.com/tentacolo"

[project.scripts]
ndplot = "ndplot:cli"
